# whatwaf

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: cli.rs  detector.rs  lib.rs  main.rs
src/detectors/: arvancloud.rs  aspa.rs  astra.rs  barracuda.rs  checkpoint.rs  cloudflare.rs  cloudfront.rs  datadome.rs  ddosguard.rs  dotdefender.rs  fortiweb.rs  frontdoor.rs  incapsula.rs  janusec.rs  kona.rs  mod.rs  nexusguard.rs  radware.rs  safeline.rs  sucuri.rs  vercel.rs  wordfence.rs  zenedge.rs
src/utils/: checks.rs  http.rs  mod.rs
