[package]
name = "whatwaf"
version = "1.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/jeremyctrl/whatwaf"
readme = "README.md"
description = "Heuristic web application firewall (WAF) detector."

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
inventory = "0.3.21"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = {version = "0.12.24", features = ["blocking"] }
