[package]
name = "whatwaf"
version = "1.11.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jeremyctrl/whatwaf"
readme = "README.md"
description = "Heuristic web application firewall (WAF) detector."

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
inventory = "0.3.22"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = {version = "0.13.2", features = ["blocking"] }
sha2 = "0.11.0"
